--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body
 .ull
 {
     display: flex;
+    overflow-x: scroll;
 }
 
 .ull li
@@ -94,11 +95,6 @@ body
     font-size: 20px;
     font-weight: 600;
 }
-.fa-bars
-{
-    display: none;
-    cursor: pointer;
-}
 
 #menu
 {
@@ -124,16 +120,16 @@ body
     font-size: 20px;
 }
 
-.ul
+.all-ul
 {
     display: flex;
-    overflow-x: scroll;
     width: 100%;
+    overflow-x: scroll;
 }
 
 .sec-li
 {
-    margin: 0 20px;
+    margin: 0 10px;
     width: 150px;
     list-style: none;
     margin: 0 10px;
@@ -164,4 +160,14 @@ body
 #menu
 {
     display: none;
+}
+
+.menu-bar
+{
+    display: flex
+}
+
+.menu-bar
+{
+    display: none
 }
